--- a/src/pages/bookings/booking-detail/booking-detail.page.html
+++ b/src/pages/bookings/booking-detail/booking-detail.page.html
@@ -6,13 +6,13 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>BookingDetail</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Booking Detail</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-
+    {{ booking.name }}
 </ion-content>
