--- a/src/pages/bookings/booking-list/booking-list.page.html
+++ b/src/pages/bookings/booking-list/booking-list.page.html
@@ -1,19 +1,19 @@
-<!--
-  Generated template for the BookingsPage page.
-
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
-
-  <ion-navbar>
-    <ion-title>Booking List</ion-title>
-  </ion-navbar>
-
+    <ion-navbar></ion-navbar>
 </ion-header>
 
 
-<ion-content padding>
-  <p>Go To Details Page</p>
-  <button (click)="goToDetails()">Details</button>
+<ion-content class="list-avatar-page">
+  <ion-list>
+    <ion-item *ngFor="let booking of bookings" (click)="goToDetails($event, booking)">
+      <ion-avatar item-start>
+        <img src="https://ionicframework.com/dist/preview-app/www/assets/img/avatar-ts-buzz.png">
+      </ion-avatar>
+      <h2>{{booking.name}}</h2>
+      <p>{{booking.city}}, {{booking.state}} - 12/25/2018 @ 8pm </p>
+      <button ion-button clear item-end>View</button>
+      
+    </ion-item>  
+  </ion-list>
 </ion-content>
+
