--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,18 +1,15 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>uGig</ion-title>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  <h3>Ionic Menu Starter</h3>
-
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
-
-  <button ion-button secondary menuToggle>Toggle Menu</button>
-</ion-content>
+<ion-tabs>
+  <ion-tab [root]="bookingsTab" tabIcon="home" tabTitle="bookings"></ion-tab>
+  <ion-tab [root]="artistsTab" tabIcon="people" tabTitle="artists"></ion-tab>
+  <ion-tab [root]="venuesTab" tabIcon="globe" tabTitle="venues"></ion-tab>
+  <ion-tab [root]="promotersTab" tabIcon="contacts" tabTitle="promoters"></ion-tab>
+</ion-tabs>
